Restructured files to allow for multipage react rendering

--- a/src/stylesheets/home.scss
+++ b/src/stylesheets/home.scss
@@ -1,4 +1,4 @@
-body {
+#main {
   background-image: url('http://www.acsenda.com/wp-content/uploads/2015/03/vancouver-skyline.jpg');
   background-repeat: no-repeat;
   background-size: 100% 100%;
