Added transparency and modified search bar in home page

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -35,7 +35,7 @@ nav div:first-child {
   }
 
   .logo{
-    color:white;
+    color: #d35050
   }
 
   img {
@@ -49,7 +49,7 @@ nav div:first-child {
   nav {
     display: flex;
     justify-content: space-between;
-    background: #222;
+    background: transparent;
     align-items: center;
     ul {
       display: flex;
