--- a/src/stylesheets/newspot.scss
+++ b/src/stylesheets/newspot.scss
@@ -3,14 +3,14 @@
   width: 100%;
 }
 
-#root{
-  background: linear-gradient(to bottom, #cc33ff 0%, #ff9933 100%);
-  height: 100%;
-  width:  100%;
-  background-size: 100% 100%;
-  font-family: sans-serif;
-  z-index: 0;
-}
+// #root{
+//   background: linear-gradient(to bottom, #cc33ff 0%, #ff9933 100%);
+//   height: 100%;
+//   width:  100%;
+//   background-size: 100% 100%;
+//   font-family: sans-serif;
+//   z-index: 0;
+// }
 .heading{
   color:white;
 }
