--- a/src/stylesheets/home.scss
+++ b/src/stylesheets/home.scss
@@ -25,6 +25,7 @@ html{
     font-weight: bold;
     font-size: 55px;
     text-align: center;
+    margin-top: 30px;
   }
 
   p {
@@ -34,6 +35,7 @@ html{
     font-family: sans-serif;
     text-align: center;
     font-weight: bold;
+    margin-top: 50px;
   }
 }
 
@@ -52,8 +54,10 @@ input#search-bar{
   height: 45px;
   padding: 0 20px;
   font-size: 1rem;
+  text-align: left;
   border: 1px solid #D0CFCE;
   outline: none;
+  background-color: white;
   &:focus{
     border: 1px solid #008ABF;
     transition: 0.35s ease;
