js add marker not working with react. Troubleshooting required

--- a/src/stylesheets/map.scss
+++ b/src/stylesheets/map.scss
@@ -9,6 +9,8 @@
 
 .marker {
   background-image: './../icons/park.png';
+  height: 20px;
+  width: 20px;
   display: block;
   border: none;
   cursor: pointer;
