--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -2,21 +2,28 @@ body {
   margin: 0px;
 }
 
+main {
+  display: flex;
+}
 nav {
+  flex: 1;
   font-family: sans-serif;
   z-index: 1;
+  position: absolute;
+  width: 100%;
+  margin-top: 2%;
   ul {
     list-style: none;
     padding: 0;
     background: #444;
     margin: 0;
+    text-align: right;
     li {
       border-bottom: 1px dotted #ddd;
       a {
         color: #ddd;
         text-decoration: none;
         padding: .8rem 1rem;
-        display: block;
         line-height: 1;
       }
     }
@@ -31,7 +38,7 @@ nav div:first-child {
     line-height: 0;
     padding: .8rem 0rem;
     text-align: center;
-    margin: 0;
+    margin: 0 28%;
   }
 
   .logo{
