--- a/src/stylesheets/newspot.scss
+++ b/src/stylesheets/newspot.scss
@@ -1,50 +1,109 @@
-#newspot{
-  height: 100%;
-  width: 100%;
-}
+/*custom font*/
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 
-// #root{
-//   background: linear-gradient(to bottom, #cc33ff 0%, #ff9933 100%);
-//   height: 100%;
-//   width:  100%;
-//   background-size: 100% 100%;
-//   font-family: sans-serif;
-//   z-index: 0;
-// }
-.heading{
-  color:white;
-}
-
-#address-bar, #city-bar, #postalcode-bar{
-  box-sizing: border-box;
-  margin: 0 auto;
-  height: 45px;
-  padding: 0 20px;
-  font-size: 1rem;
-  border: 1px solid #D0CFCE;
-  outline: none;
-  &:focus{
-    border: 1px solid #008ABF;
-    transition: 0.35s ease;
-    color: #008ABF;
-    &::-webkit-input-placeholder{
-      transition: opacity 0.45s ease; 
-      opacity: 0;
-    }
-    &::-moz-placeholder {
-      transition: opacity 0.45s ease; 
-      opacity: 0;
-    }
-    &:-ms-placeholder {
-      transition: opacity 0.45s ease; 
-      opacity: 0;
-    }    
-  }
-}
-
-#address-bar, #postalcode-bar, #city-bar{
-  float: left;
+/*form styles*/
+#formimagebox{
+  font-family: sans-serif;
   position: relative;
-  left: 5%;
-  width: 45%;
+  float: right;
+  margin-top: 45px;
+  margin-right: 15px;
 }
+
+#imgbox{
+  margin: 25px auto;
+  padding: 10px 25px;
+  display: block;
+  max-width:400px;
+  max-height:300px;
+  width: auto;
+  height: auto;
+  position: relative;
+}
+
+#msform {
+  float: left;
+  width: 40%;
+  margin-left: 35px;
+	text-align: center;
+	position: relative;
+}
+
+#formimagebox{
+  float: right;
+  position: relative;
+}
+
+#msform fieldset {
+	background: white;
+	border: 0 none;
+	border-radius: 3px;
+	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+	padding: 20px 30px;
+	box-sizing: border-box;
+	width: 80%;
+	margin: 0 10%;
+	
+	/*stacking fieldsets above each other*/
+	position: relative;
+}
+
+/*Hide all except first fieldset*/
+#msform fieldset:not(:first-of-type) {
+	display: none;
+}
+/*inputs*/
+#msform input, #msform textarea {
+	padding: 15px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	margin-bottom: 10px;
+	width: 100%;
+	box-sizing: border-box;
+	font-family: montserrat;
+	color: #2C3E50;
+	font-size: 13px;
+}
+/*buttons*/
+#msform .action-button {
+	width: 100px;
+	background: #27AE60;
+	font-weight: bold;
+	color: white;
+	border: 0 none;
+	border-radius: 1px;
+	cursor: pointer;
+	padding: 10px 5px;
+	margin: 10px 5px;
+}
+
+#msform .action-button:hover, #msform .action-button:focus {
+	box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
+}
+
+/*picture buttons*/
+#formimagebox .action-button {
+	width: 100px;
+	background: #27AE60;
+	font-weight: bold;
+	color: white;
+	border: 0 none;
+	border-radius: 1px;
+	cursor: pointer;
+	padding: 10px 25px;
+	margin: 10px 15px;
+}
+
+#formimagebox .action-button:hover, #formimagebox .action-button:focus {
+	box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
+}
+
+/*headings*/
+.fs-title {
+  font-family: sans-serif;
+  font-size: 2em;
+	color: white;
+	margin-bottom: 10px;
+}
+
+
