--- a/src/stylesheets/newspot.scss
+++ b/src/stylesheets/newspot.scss
@@ -1,38 +1,22 @@
 /*custom font*/
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
-/*form styles*/
-#formimagebox{
-  font-family: sans-serif;
-  position: relative;
-  float: right;
-  margin-top: 45px;
-  margin-right: 15px;
+
+
+#sharespotform{
+	margin-top: 5% ;
 }
 
-#imgbox{
-  margin: 25px auto;
-  padding: 10px 25px;
-  display: block;
-  max-width:400px;
-  max-height:300px;
-  width: auto;
-  height: auto;
-  position: relative;
-}
 
 #msform {
   float: left;
   width: 40%;
   margin-left: 35px;
-	text-align: center;
-	position: relative;
+  text-align: center;
+	position: absolute;
+	left: 30px;
 }
 
-#formimagebox{
-  float: right;
-  position: relative;
-}
 
 #msform fieldset {
 	background: white;
@@ -54,7 +38,7 @@
 }
 /*inputs*/
 #msform input, #msform textarea {
-	padding: 15px;
+	padding: 12px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
 	margin-bottom: 10px;
@@ -66,15 +50,14 @@
 }
 /*buttons*/
 #msform .action-button {
-	width: 100px;
-	background: #27AE60;
-	font-weight: bold;
-	color: white;
-	border: 0 none;
-	border-radius: 1px;
-	cursor: pointer;
-	padding: 10px 5px;
-	margin: 10px 5px;
+	margin-top: 30px;
+    width: 100px;
+    background: #27AE60;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 1px;
+    cursor: pointer;
 }
 
 #msform .action-button:hover, #msform .action-button:focus {
@@ -106,4 +89,38 @@
 	margin-bottom: 10px;
 }
 
+.sharespotform .file-upload {
+	font-family: sans-serif;
+    margin-top: 45px;
+    margin-right: 15px;
+    position: absolute;
+    left: 28.5%;
+    top: 57%;
+    left: 46%;
+}
 
+ .file-upload__label {
+  display: block;
+  padding: 1em 2em;
+  color: #fff;
+  background: #27AE60;
+  border-radius: .4em;
+  transition: background .3s;
+  
+  &:hover {
+     cursor: pointer;
+     background: #000;
+  }
+}
+    
+.fu .file-upload__input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    font-size: 1;
+    width:0;
+    height: 100%;
+    opacity: 0;
+}
