--- a/src/stylesheets/map.scss
+++ b/src/stylesheets/map.scss
@@ -1,5 +1,6 @@
 #map {
   position: absolute;
+  left: 0%;
   top: 0;
   bottom: 0;
   width: 100%;
@@ -7,12 +8,85 @@
 }
 
 
-.marker {
-  background-image: './../icons/park.png';
-  height: 20px;
-  width: 20px;
+.mapboxgl-marker {
+  background-image: url("https://cdn2.iconfinder.com/data/icons/vehicle-type/1024/hatchback-512.png");
+  background-size: cover;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.mapboxgl-popup {
+  max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.mapboxgl-popup-close-button {
+  color: black;
+  left: 57px;
+  top: -9px;
+  width: auto;
+  height: auto;
+  position: absolute;
+  margin-left: 126px;
+  margin-top: 8px;
+}
+
+.map-overlay {
+  position: absolute;
+  width: 25%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  background-color: #fff;
+  max-height: 100%;
+  overflow: hidden;
+}
+
+.map-overlay fieldset {
+  display: none;
+  background: #ddd;
+  border: none;
+  padding: 10px;
+  margin: 0;
+}
+
+.map-overlay input {
   display: block;
   border: none;
-  cursor: pointer;
-  padding: 0;
+  width: 100%;
+  border-radius: 3px;
+  padding: 10px;
+  margin: 0;
+}
+
+.map-overlay .listing {
+  overflow: auto;
+  max-height: 100%;
+}
+
+.map-overlay .listing > * {
+  display: block;
+  padding: 5px 10px;
+  margin: 0;
+}
+
+.map-overlay .listing a {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  color: #404;
+  text-decoration: none;
+}
+
+.map-overlay .listing a:last-child {
+  border: none;
+}
+
+.map-overlay .listing a:hover {
+  background: #f0f0f0;
 }
