--- a/src/stylesheets/home.scss
+++ b/src/stylesheets/home.scss
@@ -86,5 +86,12 @@ input#search-bar{
   right: -10px;
 }
 
-
+.backdrop {
+  display: block;
+  position: fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  background: black;
+  opacity: 0.56;
+  z-index: 1;
+}
 
