--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -45,6 +45,15 @@
 
 //////
 
+html {
+  background-image: url('http://www.acsenda.com/wp-content/uploads/2015/03/vancouver-skyline.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
 body {
   margin: 0px;
 }
