--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -14,7 +14,10 @@ body {
 main {
   display: flex;
 }
+
 nav {
+  height: 40px;
+  top: -34px;
   flex: 1;
   font-family: sans-serif;
   z-index: 1;
@@ -30,7 +33,7 @@ nav {
     li {
       border-bottom: 1px dotted #ddd;
       a {
-        color: #ddd;
+        color: black;
         text-decoration: none;
         padding: .8rem 1rem;
         line-height: 1;
@@ -42,20 +45,16 @@ nav {
 /*styling logo*/
 
 nav div:first-child {
-  background: #222;
   h1 {
     line-height: 0;
-    padding: .8rem 0rem;
+    padding: .3rem 0rem;
     text-align: center;
     margin: 0 28%;
   }
-
-  .logo{
-    color: #d35050
-  }
-
   img {
-    filter: contrast(0);
+    margin-inline-start: 15px;
+    background-color: rgba(125, 125, 125, 0.49);
+    border-radius: 12px;
   }
 }
 
@@ -65,7 +64,6 @@ nav div:first-child {
   nav {
     display: flex;
     justify-content: space-between;
-    background: transparent;
     align-items: center;
     ul {
       display: flex;
@@ -77,7 +75,9 @@ nav div:first-child {
         flex: 1 0 auto;
         position: relative;
         a {
-          padding: 1.2rem 1rem;
+          padding: 0.5rem 1rem;
+          background-color: rgba(125, 125, 125, 0.49);
+          border-radius: 12px;
         }
       }
     }
@@ -94,21 +94,23 @@ nav div:first-child {
 }
 
 // Animation under nav buttons
-nav ul li a::before, nav ul li a::after{
+nav ul li a::before,
+nav ul li a::after {
   content: "";
   position: absolute;
-  bottom:0;
+  bottom: 0;
   right: 0;
-  width:0%;
+  width: 0%;
   height: 2px;
-  background:red;
+  background: red;
   transition: .2s width ease-in-out;
 }
 
-nav ul li a::before{
-  left:0;
+nav ul li a::before {
+  left: 0;
 }
 
-nav ul li a:hover::after,nav ul li a:hover::before{
+nav ul li a:hover::after,
+nav ul li a:hover::before {
   width: 50%;
-} 
+}
