--- a/src/stylesheets/user.scss
+++ b/src/stylesheets/user.scss
@@ -29,7 +29,7 @@
   background: rgba(0, 0, 0, 0.5);
   text-align: center;
   width: 400px;
-  height: 500px;
+  height: 90vh;
   margin-top: 25px;
 }
 
@@ -38,8 +38,8 @@
   border-radius: 25px;
   background:rgba(0, 0, 0, 0.5);
   text-align: center;
-  width: 400px;
-  height: 500px;
+  width: 550px;
+  height: 90vh;
   margin-top: 25px;
 }
 .spots {
@@ -47,8 +47,8 @@
   border-radius: 25px;
   background: rgba(0, 0, 0, 0.5);
   text-align: center;
-  width: 570px;
-  height: 260px;
+  width: 550px;
+  height: 90vh;
   margin-top: 25px;
   margin-left: 25px;
 }
@@ -57,7 +57,7 @@
   border: 1px solid white;
   border-radius: 20px;
   width: 90%;
-
+  background: rgba(0, 0, 0, 0.5);
   height: 85%;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -65,16 +65,6 @@
   background: rgba(0, 0, 0, 0.5);
 }
 
-.spots #container {
-  border: 1px solid white;
-  border-radius: 20px;
-  width: 90%;
-  background: rgba(0, 0, 0, 0.5);
-  height: 65%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  margin-left: 20px;
-}
 /*Set the container height to 100% of the page */
 .userSection .container {
   height: 100%;
