fix background on map feature list

--- a/src/stylesheets/map.scss
+++ b/src/stylesheets/map.scss
@@ -51,6 +51,8 @@
 }
 
 #featurelist {
+  background-color: whitesmoke;
+  min-height: 100vh;
   margin-top: 155px;
   .list-group-item {
     border: 1px solid black;
