changed park icon

--- a/src/stylesheets/map.scss
+++ b/src/stylesheets/map.scss
@@ -72,7 +72,7 @@
 }
 
 .mapboxgl-marker {
-  background-image: url("https://cdn2.iconfinder.com/data/icons/vehicle-type/1024/hatchback-512.png");
+  background-image: url("./car.png");
   background-size: cover;
   width: 35px;
   height: 35px;
