--- a/src/stylesheets/newspot.scss
+++ b/src/stylesheets/newspot.scss
@@ -4,7 +4,7 @@
 #msform {
   float: left;
   width: 40%;
-  margin-left: 35px;
+  margin-left: 12vw;
   text-align: center;
 	position: absolute;
 	left: 30px;
@@ -85,7 +85,7 @@
 .file-upload {
 	position: relative;
 	display: inline-block;
-	left: 700px;
+	left: 63vw;
     top: 175px;
 }
 
