--- a/src/stylesheets/user.scss
+++ b/src/stylesheets/user.scss
@@ -55,6 +55,20 @@
   margin-left: 25px;
 }
 
+.cars {
+  border: 1px solid white;
+  border-radius: 25px;
+  background: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  width: 570px;
+  height: 260px;
+  margin-top: 25px;
+  margin-left: 25px;
+  position: absolute;
+  top: 300px;
+  left: 655px;
+}
+
 #container {
   border: 1px solid white;
   border-radius: 20px;
@@ -195,4 +209,106 @@
 .reservations h3,.spots h3 {
   color: #D15153;
 
+}
+
+.cars h3 {
+  display: inline;
+}
+
+//=== Drawing ef
+
+@import  url(https://fonts.googleapis.com/css?family=Montserrat);
+
+$button-bg-color: #348AA7;
+$button-border-color: #166E84;
+
+
+
+.button{
+  display: inline-block;
+  padding: 15px;
+  margin-right: 5px;
+  height: 50px;
+  min-width: 100px;
+  background: $button-bg-color;
+  border: none;
+  outline: none;
+  color: white;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 20px;
+  border-radius: 3px;
+  box-shadow: 0 5px 0px darken($button-bg-color,0%);
+  border-bottom: 2px solid darken($button-bg-color,3%);
+  
+  &:hover{
+    background: darken($button-bg-color,5%);
+    box-shadow: 0 4px 1px darken($button-bg-color,5%);
+    border-bottom: 2px solid darken($button-bg-color,8%);
+    transition: all 0.1s ease-in;
+  }
+  
+  &:active{
+    transform:translateY(4px);
+    border-bottom-width: 2px;
+    box-shadow: none;
+  }
+}
+
+
+
+
+
+#carform {
+  margin-left: 400px;
+  margin-top: 200px;
+  float: left;
+  width: 40%;
+  text-align: center;
+  position: absolute;
+
+}
+#carform fieldset {
+	background: white;
+	border: 0 none;
+	border-radius: 3px;
+	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+	padding: 20px 30px;
+	box-sizing: border-box;
+	width: 80%;
+	margin: 0 10%;
+	top: 75px;
+	position: relative;
+}
+
+/*Hide all except first fieldset*/
+#carform fieldset:not(:first-of-type) {
+	display: none;
+}
+/*inputs*/
+#carform input, #carform textarea {
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	margin-bottom: 10px;
+	width: 100%;
+	box-sizing: border-box;
+	font-family: montserrat;
+	color: #2C3E50;
+	font-size: 13px;
+}
+/*buttons*/
+#carform .action-button {
+	margin-top: 30px;
+    width: 100px;
+    background: #27AE60;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 1px;
+    cursor: pointer;
+}
+
+#carform .action-button:hover, #carform .action-button:focus {
+	box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
 }
