add confirmation check on picture upload newspot

--- a/src/stylesheets/newspot.scss
+++ b/src/stylesheets/newspot.scss
@@ -140,6 +140,7 @@
   position: absolute;
   margin-left: 80px;
   margin-top: 30px;
+  width: 100px;
 }
 
 #pictureupload {
@@ -147,6 +148,7 @@
   .action-button {
     margin-top: 30px;
     width: 100px;
+    height: 36px;
     background: #27AE60;
     font-weight: bold;
     color: white;
