--- a/src/stylesheets/user.scss
+++ b/src/stylesheets/user.scss
@@ -5,8 +5,15 @@
   
 
 }
-.sidebar{
+.sidebar{ 
   margin-top: 30px;
+  border-radius: 10px;
+  float: left;
+  min-width: 160px;
+  max-width: 208px;
+  margin-right: 20px;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
 }
 .sidebar img {
   width: 150px;
@@ -25,15 +32,7 @@
   text-decoration: underline;
   color : white ;
 }
-.spots {
-  border: 1px solid white;
-  border-radius: 25px;
-  background: rgba(0, 0, 0, 0.5);
-  text-align: center;
-  width: 400px;
-  height: 500px;
-  margin-top: 25px;
-}
+
 
 .reservations {
   border: 1px solid white;
@@ -61,12 +60,12 @@
   background: rgba(0, 0, 0, 0.5);
   text-align: center;
   width: 570px;
-  height: 260px;
+  height: 240px;
   margin-top: 25px;
   margin-left: 25px;
   position: absolute;
-  top: 300px;
-  left: 655px;
+  top: 320px;
+  left: 673px;
 }
 
 #container {
@@ -87,6 +86,16 @@
   width: 90%;
   background: rgba(0, 0, 0, 0.5);
   height: 65%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-left: 20px;
+}
+.cars #container {
+  border: 1px solid white;
+  border-radius: 20px;
+  width: 90%;
+  background: rgba(0, 0, 0, 0.5);
+  height: 70%;
   overflow-y: scroll;
   overflow-x: hidden;
   margin-left: 20px;
@@ -168,7 +177,7 @@
 }
 
 .userSection  .tweet-body p {
-  border-bottom: 1px solid #D0D0D0;
+  border-bottom: 1px solid #E8E8E8	;
   margin-bottom: 0px;
   margin-top: 5px;
 }
@@ -199,14 +208,15 @@
   text-decoration: wavy;
 }
 
-.sidebar h4 {
+.sidebar h5, .sidebar h6 {
   color: white;
   padding: 10px;
   text-align: center;
   font-family: sans-serif;
 }
 
-.reservations h3,.spots h3 {
+.reservations h3,.spots h3,.cars h3 {
+  float: left;
   color: #D15153;
 
 }
@@ -226,37 +236,34 @@ $button-border-color: #166E84;
 
 .button{
   display: inline-block;
-  padding: 15px;
-  margin-right: 5px;
-  height: 50px;
+  padding: 5px;
+  margin-top: 7px;
+  height: 30px;
   min-width: 100px;
-  background: $button-bg-color;
+  background: rgba(0, 0, 0, 0.5);
   border: none;
-  outline: none;
+  margin-right: 30px;
+  border: 1px solid #eeeeee;
   color: white;
-  font-family: inherit;
+  font-family: sans-serif;
   font-weight: 400;
   font-size: 20px;
-  border-radius: 3px;
-  box-shadow: 0 5px 0px darken($button-bg-color,0%);
-  border-bottom: 2px solid darken($button-bg-color,3%);
+  border-radius: 10px;
+
+  float: right;
   
   &:hover{
-    background: darken($button-bg-color,5%);
-    box-shadow: 0 4px 1px darken($button-bg-color,5%);
-    border-bottom: 2px solid darken($button-bg-color,8%);
+    color: #D15153 ;
+    border-radius: 10px;
+    border: 1px solid #fc644dbd;
     transition: all 0.1s ease-in;
   }
   
   &:active{
     transform:translateY(4px);
-    border-bottom-width: 2px;
     box-shadow: none;
   }
 }
-
-
-
 
 
 #carform {
