--- a/src/stylesheets/parkingdetail.scss
+++ b/src/stylesheets/parkingdetail.scss
@@ -1,400 +1,403 @@
       
-      .parkingdetail{
-          font-family: sans-serif;
-          position: relative;
-          margin: auto;
-          top: 35px;
-          color: white;
-      }
+.parkingdetail{
+    font-family: sans-serif;
+    position: relative;
+    margin: auto;
+    top: 35px;
+    color: white;
+}
 
-      .bodyWrap
-      {
-      width: 900px;
-      margin: 5% auto;
-      }
+.bodyWrap
+{
+width: 900px;
+margin: 5% auto;
+position: relative;
+left: 100px;
+}
 
-      .breadCrumbs{
-        float: left;
-        padding: 5px 0 5px 10px;
-        letter-spacing: 1px;
-        line-height: 2em;
-        color: #fff;
-      }
-      
-      .breadCrumbs>a{
-        text-decoration: none; 
-        color: #fff;
-      }
-      
-      .breadCrumbs>a:hover{
-        text-decoration: underline;
-      }
-      
-      
-      .sidebar
-      {
-      border-radius: 10px;
-      float:left;
-      min-width: 160px;
-      max-width: 198px;
-      margin-right: 20px;
-      background: rgba(0,0,0,0.5);
-      color:white;
-      }
-      
-      .sidebar.slim{
-        max-width: 140px;
-      }
-      
-      .content
-      {
-      overflow: hidden;
-      background:rgba(0,0,0,0.5);
-      }
-      
-      .content p
-      {
-      padding: 0 0 0 10px;
-      }
-      
-      .bottom
-      {
-      width: 100%;
-      height: 2.5em;
-      border-top: 1px solid #B6B6AB;
-      background: #EAEAEA;
-      }
-      
-      .bd
-      {
-      border: 1px solid #B6B6AB;
-      border-radius: 4px;
-      }
-      
-      .clearFix:after
-      {
-      content: " ";
-      display: block;
-      height: 0;
-      clear: both;
-      }
-      
-      .productStage, .productImage, .overview
-      {
-        float: left;
-      }
-      
-      .overview h1, .overview h2, .overview h3
-      {
-        padding: 0;
-        margin: 0 0 10px 0;
-      }
-      
-      .productStage
-      {
-        border-radius: 10px;
-        background:rgba(0,0,0,0.5);
-        width: 700px;
-        margin-right: 20px;
-      }
-      
-      .productImage
-      {
-        width: 350px;
-        text-align: center;
-        margin-bottom: 20px;
-      }
-      
-      .productImage span{
-        float: right;
-        padding-right: 30px;
-      }
-      
-      .overview
-      {
-        float: left;
-        width: 320px;
-      }
-      
-      
-      .productbutton
-      {
-      display: block;
-      color: #fff;
-      border-radius: 4px;
-      padding: 5px;
-      margin: auto;
-      margin-bottom: 10px;
-      text-decoration: none;
-      border-radius:3px;
-      text-align: center;
-      cursor: pointer;
-      }
-      
-      .productbutton a:hover
-      {
-      text-decoration: none;
-      }
-      
-      .reserve{
-        width: 150px;
-        line-height: 2em;
-        background: #59A80F;
-      }
-      
-      .reserve:hover{
-        background: #4B8E0D;
-      }
-      
-      .submit{
-        background: #EAEAEA;
-        color: #555;
-        float: right;
-        text-transform: uppercase;
-        font: bold 10px Verdana;
-      }
-      
-      .blueSubmit{
-        background: #22697F;
-        color: #fff;
-        border: 1px solid #22697F;
-      }
-      
-      .right{
-        float: right;
-      }
-      
-      .left{
-        float: left;
-      }
-      
-      .imageList { list-style: none; margin: 5px 0px 2px 0px; padding: 0; }
-      .imageList li { display: inline; padding: 0; margin: 0 2px;  }
-      .imageList a { text-decoration: none; }
-      .imageList img { border: 1px solid #D3D3D3; vertical-align: top; }
-      
-      .prodSelect{
-        width: 100%;
-        border-radius: 4px;
-        height: 2em;
-        outline: none;
-        margin-bottom: 15px;
-      }
-      
-      .rating{
-        color: #FC913A;
-      }
-      
-      .info{
-        float: left;
-        width: 100%;
-      }
-      
-      .info h3{
-        background: #22697F;
-        line-height: 36px;
-        padding: 5px 0 5px 20px;
-        border-radius: 4px;
-        letter-spacing: 1px;
-        color: #fff;
-        text-shadow:1px 1px 3px rgba(0,0,0,0.5);
-        font: 10pt Verdana;
-        text-transform: uppercase;
-      }
-      
-      .description{
-        display: inline-block;
-        margin: 10px 0 20px 0;
-      }
-      
-      .specs{
-        list-style-type: none;
-        margin: 0;
-        padding: 0 0 0 10px;
-      }
-      
-      .specs li{
-        padding: 0 0 5px 0;
-      }
-      
-      .specs h5{
-        display: inline;
-        font: bold 10pt Verdana;
-      }
-      
-      
-      .product
-      {
-      width: 150px;
-      padding: 10px 0 0 10px;
-      display: inline-block;
-      text-align: center;
-      font-size: 11px;
-      line-height: 14px;
-      text-decoration: none;
-      margin-bottom: 20px;
-      overflow: hidden;
-      }
-      
-      .product a{
-        text-decoration: none;
-      }
-      
-      .product a:hover{
-        text-decoration: underline;
-      }
-      
-      .product .smallBox
-      {
-      display: inline-block;
-      max-width: 92px;
-      max-height: 92px;
-      overflow: hidden;
-      }
-      
-      .product span, .product div
-      {
-      display: block;
-      }
-      
-      .soft
-      {
-      padding-left: 8px;
-      }
-      
-      .hard
-      {
-      padding-left: 12px;
-      }
-      
-      .slim
-      {
-        padding: 0;
-        margin: 0 0 10px 0;
-        width: 100%;
-        display: block;
-      }
-      
-      .vtop
-      {
-      vertical-align: top;
-      }
-      
-      .vbot
-      {
-      vertical-align: bottom;
-      }
-      
-      .manuName
-      {
-      margin: 10px 0 5px 0;
-      font-weight: bold;
-      color: #464646;
-      }
-      
-      .prodName
-      {
-      color: #464646;
-      margin: 0 0 5px 0;
-      }
-      
-      .prodPrice
-      {
-      text-decoration: none;
-      }
-      
-      .review{
-        background: #E7F5FD;
-        color: #555;
-        padding: 10px;
-        border-radius: 4px;
-        margin-bottom: 15px;
-        float: left;
-      }
-      
-      .review span{
-        float: left;
-      }
-      
-      .review:hover .vote{
-        opacity: 1;
-      }
-      
-      .vote{
-        opacity: 0;
-        float: right;
-        font-weight: bold;
-        padding: 15px 0 0 0;
-      }
-      
-      span.title{
-        text-align: left;
-        font-weight: bold;
-        padding: 0 0 10px 0;
-      }
-      
-      span.author{
-        text-align: right;
-        float: left;
-        padding: 15px 0 0 0;
-      }
-      
-      .stars{
-        padding: 10px 0;
-        display: inline-block;
-      }
-      
-      .botBorder{
-        padding: 10px;  
-        border-top: none;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        margin-bottom: 20px;
-      }
-      
-      .folderTab {
-          display:none;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-      background: #22697F;
-      text-shadow: 1px 1px 0 rgba(0,0,0, .8);
-      text-align: center;
-      color: #fff;
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
-      border: 1px solid #22697F;
-      }
-      
-      .folderTab.sub{
-        background: #5196A3;
-        border: 1px solid #5196A3;
-      }
-      
-      .folderTab h3{  
-        margin: 0;
-        padding: 5px 0 5px 20px;
-        color: #fff;
-        text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-        letter-spacing: 1px;
-        font: 10pt Verdana;
-        line-height: 2em;
-        max-width: 400px;
-        text-transform: uppercase;
-        text-align: left;
-        float: left;
-      }
-      
-       .folderTab.sub h3{
-         text-align: center;
-         padding: 5px;
-         float: none;
-       }
-      
-      .submit:hover{
-        background: #D2D2D2;
-      }
-      
-      .blueSubmit:hover{
-        background: #184A5A;
-        border: 1px solid #184A5A;
-      }
+.breadCrumbs{
+  float: left;
+  padding: 5px 0 5px 10px;
+  letter-spacing: 1px;
+  line-height: 2em;
+  color: #fff;
+}
+
+.breadCrumbs>a{
+  text-decoration: none; 
+  color: #fff;
+}
+
+.breadCrumbs>a:hover{
+  text-decoration: underline;
+}
+
+
+.sidebar
+{
+border-radius: 10px;
+float:left;
+min-width: 160px;
+max-width: 198px;
+margin-right: 20px;
+background: rgba(0,0,0,0.5);
+color:white;
+}
+
+.sidebar.slim{
+  max-width: 140px;
+}
+
+.content
+{
+overflow: hidden;
+background:rgba(0,0,0,0.5);
+}
+
+.content p
+{
+padding: 0 0 0 10px;
+}
+
+.bottom
+{
+width: 100%;
+height: 2.5em;
+border-top: 1px solid #B6B6AB;
+background: #EAEAEA;
+}
+
+.bd
+{
+border: 1px solid #B6B6AB;
+border-radius: 4px;
+}
+
+.clearFix:after
+{
+content: " ";
+display: block;
+height: 0;
+clear: both;
+}
+
+.productStage, .productImage, .overview
+{
+  float: left;
+}
+
+.overview h1, .overview h2, .overview h3
+{
+  padding: 0;
+  margin: 0 0 10px 0;
+}
+
+.productStage
+{
+  border-radius: 10px;
+  background:rgba(0,0,0,0.5);
+  width: 700px;
+  margin:auto;
+
+}
+
+.productImage
+{
+  width: 350px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.productImage span{
+  float: right;
+  padding-right: 30px;
+}
+
+.overview
+{
+  float: left;
+  width: 320px;
+}
+
+
+.productbutton
+{
+display: block;
+color: #fff;
+border-radius: 4px;
+padding: 5px;
+margin: auto;
+margin-bottom: 10px;
+text-decoration: none;
+border-radius:3px;
+text-align: center;
+cursor: pointer;
+}
+
+.productbutton a:hover
+{
+text-decoration: none;
+}
+
+.reserve{
+  width: 150px;
+  line-height: 2em;
+  background: #59A80F;
+}
+
+.reserve:hover{
+  background: #4B8E0D;
+}
+
+.submit{
+  background: #EAEAEA;
+  color: #555;
+  float: right;
+  text-transform: uppercase;
+  font: bold 10px Verdana;
+}
+
+.blueSubmit{
+  background: #22697F;
+  color: #fff;
+  border: 1px solid #22697F;
+}
+
+.right{
+  float: right;
+}
+
+.left{
+  float: left;
+}
+
+.imageList { list-style: none; margin: 5px 0px 2px 0px; padding: 0; }
+.imageList li { display: inline; padding: 0; margin: 0 2px;  }
+.imageList a { text-decoration: none; }
+.imageList img { border: 1px solid #D3D3D3; vertical-align: top; }
+
+.prodSelect{
+  width: 100%;
+  border-radius: 4px;
+  height: 2em;
+  outline: none;
+  margin-bottom: 15px;
+}
+
+.rating{
+  color: #FC913A;
+}
+
+.info{
+  float: left;
+  width: 100%;
+}
+
+.info h3{
+  background: #22697F;
+  line-height: 36px;
+  padding: 5px 0 5px 20px;
+  border-radius: 4px;
+  letter-spacing: 1px;
+  color: #fff;
+  text-shadow:1px 1px 3px rgba(0,0,0,0.5);
+  font: 10pt Verdana;
+  text-transform: uppercase;
+}
+
+.description{
+  display: inline-block;
+  margin: 10px 0 20px 0;
+}
+
+.specs{
+  list-style-type: none;
+  margin: 0;
+  padding: 0 0 0 10px;
+}
+
+.specs li{
+  padding: 0 0 5px 0;
+}
+
+.specs h5{
+  display: inline;
+  font: bold 10pt Verdana;
+}
+
+
+.product
+{
+width: 150px;
+padding: 10px 0 0 10px;
+display: inline-block;
+text-align: center;
+font-size: 11px;
+line-height: 14px;
+text-decoration: none;
+margin-bottom: 20px;
+overflow: hidden;
+}
+
+.product a{
+  text-decoration: none;
+}
+
+.product a:hover{
+  text-decoration: underline;
+}
+
+.product .smallBox
+{
+display: inline-block;
+max-width: 92px;
+max-height: 92px;
+overflow: hidden;
+}
+
+.product span, .product div
+{
+display: block;
+}
+
+.soft
+{
+padding-left: 8px;
+}
+
+.hard
+{
+padding-left: 12px;
+}
+
+.slim
+{
+  padding: 0;
+  margin: 0 0 10px 0;
+  width: 100%;
+  display: block;
+}
+
+.vtop
+{
+vertical-align: top;
+}
+
+.vbot
+{
+vertical-align: bottom;
+}
+
+.manuName
+{
+margin: 10px 0 5px 0;
+font-weight: bold;
+color: #464646;
+}
+
+.prodName
+{
+color: #464646;
+margin: 0 0 5px 0;
+}
+
+.prodPrice
+{
+text-decoration: none;
+}
+
+.review{
+  background: #E7F5FD;
+  color: #555;
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 15px;
+  float: left;
+}
+
+.review span{
+  float: left;
+}
+
+.review:hover .vote{
+  opacity: 1;
+}
+
+.vote{
+  opacity: 0;
+  float: right;
+  font-weight: bold;
+  padding: 15px 0 0 0;
+}
+
+span.title{
+  text-align: left;
+  font-weight: bold;
+  padding: 0 0 10px 0;
+}
+
+span.author{
+  text-align: right;
+  float: left;
+  padding: 15px 0 0 0;
+}
+
+.stars{
+  padding: 10px 0;
+  display: inline-block;
+}
+
+.botBorder{
+  padding: 10px;  
+  border-top: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  margin-bottom: 20px;
+}
+
+.folderTab {
+    display:none;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+background: #22697F;
+text-shadow: 1px 1px 0 rgba(0,0,0, .8);
+text-align: center;
+color: #fff;
+border-top-left-radius: 4px;
+border-top-right-radius: 4px;
+border: 1px solid #22697F;
+}
+
+.folderTab.sub{
+  background: #5196A3;
+  border: 1px solid #5196A3;
+}
+
+.folderTab h3{  
+  margin: 0;
+  padding: 5px 0 5px 20px;
+  color: #fff;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+  letter-spacing: 1px;
+  font: 10pt Verdana;
+  line-height: 2em;
+  max-width: 400px;
+  text-transform: uppercase;
+  text-align: left;
+  float: left;
+}
+
+.folderTab.sub h3{
+  text-align: center;
+  padding: 5px;
+  float: none;
+}
+
+.submit:hover{
+  background: #D2D2D2;
+}
+
+.blueSubmit:hover{
+  background: #184A5A;
+  border: 1px solid #184A5A;
+}
