--- a/src/stylesheets/parkingdetail.scss
+++ b/src/stylesheets/parkingdetail.scss
@@ -108,6 +108,10 @@ clear: both;
   margin-bottom: 20px;
 }
 
+.productImage img{
+  border-radius: 12px;
+}
+
 .productImage span{
   float: right;
   padding-right: 30px;
