--- a/src/stylesheets/user.scss
+++ b/src/stylesheets/user.scss
@@ -1,13 +1,13 @@
 .userSection {
   margin-top: 50px;
-  margin-left: 4.5%;
+  margin: auto;
+  top: 15px;
   display: flex;
-  
-
+  position: relative
 }
 .sidebar{ 
   margin-top: 30px;
-  border-radius: 10px;
+  border-radius: 12px;
   float: left;
   min-width: 160px;
   max-width: 208px;
@@ -22,21 +22,23 @@
   border-radius: 50%;
   margin: 20px;
 
-  object-fit: cover;
+  // object-fit: cover;
   object-position: center right;
+
+  position: relative;
+  top: 10px;
 }
 .userSection h3 {
   font-family: sans-serif;
   padding: 10px;
-  font-style: oblique;
-  text-decoration: underline;
+  // font-style: oblique;
+  // text-decoration: underline;
   color : white ;
 }
 
 
 .reservations {
-  border: 1px solid white;
-  border-radius: 25px;
+  border-radius: 12px;
   background:rgba(0, 0, 0, 0.5);
   text-align: center;
   width: 400px;
@@ -44,33 +46,34 @@
   margin-top: 25px;
 }
 .spots {
-  border: 1px solid white;
-  border-radius: 25px;
+  border-radius: 12px;
   background: rgba(0, 0, 0, 0.5);
   text-align: center;
-  width: 570px;
   height: 260px;
   margin-top: 25px;
   margin-left: 25px;
+
+  position: relative;
+  right: 12px;
 }
 
 .cars {
-  border: 1px solid white;
-  border-radius: 25px;
+  border-radius: 12px;
   background: rgba(0, 0, 0, 0.5);
   text-align: center;
-  width: 570px;
-  height: 240px;
-  margin-top: 25px;
-  margin-left: 25px;
-  position: absolute;
-  top: 320px;
-  left: 673px;
+  margin-right: 22px;
+  height: 232px;
+  position: relative;
+  left: 10px;
+  top: 10px;
+  // margin-top: 25px;
+
+  // top: 320px;
+  // left: 673px;
 }
 
 #container {
-  border: 1px solid white;
-  border-radius: 20px;
+  border-radius: 12px;
   width: 90%;
 
   height: 85%;
@@ -81,8 +84,7 @@
 }
 
 .spots #container {
-  border: 1px solid white;
-  border-radius: 20px;
+  border-radius: 12px;
   width: 90%;
   background: rgba(0, 0, 0, 0.5);
   height: 65%;
@@ -91,8 +93,7 @@
   margin-left: 20px;
 }
 .cars #container {
-  border: 1px solid white;
-  border-radius: 20px;
+  border-radius: 12px;
   width: 90%;
   background: rgba(0, 0, 0, 0.5);
   height: 70%;
@@ -106,10 +107,9 @@
 }
 /*The following CSS helps style the containers that hold the tweets*/
 .userSection  .new-tweet-article {
-  
   background-color: white;
   border: 1px solid #d0d0d0;
-  margin-top: 15px;
+  margin-bottom: 15px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px ;
@@ -217,7 +217,7 @@
 
 .reservations h3,.spots h3,.cars h3 {
   float: left;
-  color: #D15153;
+  // color: #D15153;
 
 }
 
