reseed parking lot coordinates to look realistic, fixed styling issues with image rendering and seeding

--- a/src/stylesheets/map.scss
+++ b/src/stylesheets/map.scss
@@ -49,7 +49,10 @@
   max-height: 100vh;
   overflow-y: scroll;
   overflow-x: hidden;
-  background-color: whitesmoke;
+  // background-color: whitesmoke;
+  background-color: blanchedalmond;
+  font-family: sans-serif;
+
   section.searchmap {
     z-index: 10;
     .search-container {
