--- a/src/stylesheets/parkingdetail.scss
+++ b/src/stylesheets/parkingdetail.scss
@@ -110,6 +110,12 @@ clear: both;
 
 .productImage img{
   border-radius: 12px;
+  max-height: 250px;
+  max-width: 250px;
+  width: 250px;
+  height: 250px;
+  position: relative;
+  left: -47px;
 }
 
 .productImage span{
