--- a/src/stylesheets/newspot.scss
+++ b/src/stylesheets/newspot.scss
@@ -6,7 +6,8 @@
   width: 40%;
   margin-left: 12vw;
   text-align: center;
-  position: absolute;
+  position: relative;
+  // position: absolute;
   left: 30px;
 }
 
@@ -78,6 +79,10 @@
   cursor: pointer;
   padding: 10px 25px;
   margin: 10px 15px;
+}
+
+textarea{
+  resize: none;
 }
 
 #formimagebox .action-button:hover,
