fixed css vertical user page

--- a/src/stylesheets/user.scss
+++ b/src/stylesheets/user.scss
@@ -62,14 +62,14 @@
   background:rgba(0, 0, 0, 0.5);
   text-align: center;
   width: 400px;
-  height: 500px;
+  height: 90vh;
   margin-top: 25px;
 }
 .spots {
   border-radius: 12px;
   background: rgba(0, 0, 0, 0.5);
   text-align: center;
-  height: 260px;
+  height: 50vh;
   margin-top: 25px;
   margin-left: 25px;
 
@@ -82,7 +82,7 @@
   background: rgba(0, 0, 0, 0.5);
   text-align: center;
   margin-right: 22px;
-  height: 232px;
+  height: 39vh;
   position: relative;
   left: 10px;
   top: 10px;
@@ -95,8 +95,7 @@
 #container {
   border-radius: 12px;
   width: 90%;
-
-  height: 85%;
+  height: 93%;
   overflow-y: scroll;
   overflow-x: hidden;
   margin-left: 20px;
@@ -107,7 +106,7 @@
   border-radius: 12px;
   width: 90%;
   background: rgba(0, 0, 0, 0.5);
-  height: 65%;
+  height: 87%;
   overflow-y: scroll;
   overflow-x: hidden;
   margin-left: 20px;
@@ -116,7 +115,7 @@
   border-radius: 12px;
   width: 90%;
   background: rgba(0, 0, 0, 0.5);
-  height: 70%;
+  height: 83%;
   overflow-y: scroll;
   overflow-x: hidden;
   margin-left: 20px;
