--- a/src/stylesheets/map.scss
+++ b/src/stylesheets/map.scss
@@ -83,9 +83,9 @@
 
 #list-group #dateselectmap {
   z-index: 10;
-  top: 110px;
+  top: 15px;
   position: relative;
-  left: 12px;
+  left: 4vw;
   zoom: 0.7
 }
 
