change newspot font

--- a/src/stylesheets/newspot.scss
+++ b/src/stylesheets/newspot.scss
@@ -150,8 +150,9 @@ textarea{
 }
 
 #pictureupload {
+  font-family: sans-serif;
   font-size: 20px;
-  top: 37%;
+  top: 26vh;
   .action-button {
     margin-top: 30px;
     width: 100px;
