css changes to user.jsx

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -64,7 +64,7 @@ nav div:first-child {
     top: 10px;
     text-decoration:none;
     margin-inline-start: 15px;
-    color: rgb(177, 11, 11)
+    color:#68e766;
   }
 }
 
