--- a/src/stylesheets/user.scss
+++ b/src/stylesheets/user.scss
@@ -168,14 +168,14 @@
   float: left ;
   padding-left: 10px;
   margin-top: 10px;
-  color: #D15153 ;
+  color: black ;
  }
 
  .userSection  .new-tweet-article header h5 {
   float: right ;
   margin-right: 10px;
   color: white ;
-  margin-top: 50px;
+  
  }
 .userSection  .new-tweet-article:hover h3{
     float: left ;
@@ -187,8 +187,7 @@
 
 .userSection  .new-tweet-article header {
   height: 70px;
-  background-color: #fc644dbd;
-  border: 1px solid #fc644dbd;
+  background-color: #4d87fcb3;
   border-radius: 10px;
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
@@ -196,7 +195,7 @@
 
 .userSection  .new-tweet-article:hover header {
   height: 70px;
-  background-color: #fc644def;
+  background-color: #517adbe6;
   border: 1px solid #eeeeee;
   border-radius: 10px;
   border-bottom-left-radius: 0px;
